# da-project-backend

./: .gitignore  README.md  pyproject.toml
da-project-backend/app/: __init__.py  api.py  database.py  field_types.py  main.py  models.py  types.py
da-project-backend/app/api/: __init__.py  column.py  comment.py  csv.py  gemini.py  page.py  report.py
da-project-backend/process/: clean.py  read.py
