[project]
name = "da-project-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.4",
    "google-generativeai>=0.8.3",
    "polars>=1.12.0",
    "python-dotenv>=1.0.1",
    "ruff>=0.7.3",
    "sqlmodel>=0.0.22",
]
